# campus-buddy

./: .gitignore  2Q26-HW-项目作业要求-lhm(1).docx  AGENTS.md  README.md  debug-group-chat-resource-not-found.md  ppt_extracted.txt
backend/: .dockerignore  Dockerfile  pom.xml
deliverables/: 需求分析报告-校园搭子.docx
deliverables/submission/: submission_detailed_design_20260530.tex
deploy/: api_smoke_test.sh  campus-buddy-backend.service  docker-compose.yml  install_systemd_service.sh  json_extract.py  obs_put_get_delete_smoke.py  run_obs_smoke.sh  smoke_test.sh  smoke_test_review.sh  start_backend_deploy.sh  start_backend_service.sh  verify_compose_health.ps1
deploy/local-postgres/: 00_create_database.sql  01_schema.sql  README.md
desktop/: CMakeLists.txt
desktop/build-f-red/: CTestTestfile.cmake  cmake_install.cmake
desktop/build-f-red/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
desktop/build-qt6103/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  cmake_install.cmake
desktop/build-qt6103/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
desktop/build-qt6103/Testing/Temporary/: CTestCostData.txt
desktop/build-qt6103/api_client_config_test_autogen/: deps  moc_predefs.h
desktop/build-qt6103/api_client_config_test_autogen/include/: ApiClientConfigTest.moc  ApiClientConfigTest.moc.d
desktop/build-qt6103/campus_api_client_test_autogen/: deps  moc_predefs.h
desktop/build-qt6103/campus_api_client_test_autogen/include/: CampusApiClientTest.moc  CampusApiClientTest.moc.d
desktop/build-qt6103/campus_buddy_desktop_autogen/: deps  moc_predefs.h
desktop/src/: main.cpp
desktop/src/api/: AdminReviewApiService.cpp  AdminReviewApiService.h  CampusApiClient.cpp  CampusApiClient.h  ContactConversationApiService.cpp  ContactConversationApiService.h  MyPartnerPostApiService.cpp  MyPartnerPostApiService.h  PartnerPostApiService.cpp  PartnerPostApiService.h  ReviewCreditApiService.cpp  ReviewCreditApiService.h
desktop/src/auth/: AuthApiService.cpp  AuthApiService.h  AuthTokenStore.cpp  AuthTokenStore.h  InMemorySessionTokenStore.cpp  InMemorySessionTokenStore.h  SecureTokenStore.h
desktop/src/domain/: AdminReviewModels.h  ApiClientConfig.cpp  ApiClientConfig.h  ContactConversationModels.h  MyPartnerPostModels.h  PartnerPostModels.h  ReviewCreditModels.h
desktop/src/ui/: AdminReviewWidget.cpp  AdminReviewWidget.h  AppStyles.cpp  AppStyles.h  ConversationsWidget.cpp  ConversationsWidget.h  HomePageWidget.cpp  HomePageWidget.h  IdentityVerificationWidget.cpp  IdentityVerificationWidget.h  LoginWidget.cpp  LoginWidget.h  MyPostsWidget.cpp  MyPostsWidget.h  PlazaWidget.cpp  PlazaWidget.h  PostEditorWidget.cpp  PostEditorWidget.h  RegisterWidget.cpp  RegisterWidget.h  ReviewCreditWidget.cpp  ReviewCreditWidget.h  UiHelpers.cpp  UiHelpers.h
desktop/tests/: AdminReviewApiServiceTest.cpp  ApiClientConfigTest.cpp  AuthTokenStoreTest.cpp  CampusApiClientTest.cpp  ContactConversationApiServiceTest.cpp  MyPartnerPostApiServiceTest.cpp  PartnerPostApiServiceTest.cpp  PostEditorWidgetTest.cpp  QtServerIntegrationSmoke.cpp  ReviewCreditApiServiceTest.cpp  ServerSmokeSecurityTest.cpp  StudentPostPlazaWidgetTest.cpp
docs/: 00_project_map.md  01_project_brief.md  02_planning_spec.md  03_current_plan.md  04_product_design_v1.md  05_prototype_ia_v1.md  06_execution_preparation_v1.md  07_course_requirement_alignment_v1.md  08_requirement_mapping_for_codearts_v1.md  09_codearts_requirement_tables_v1.md  10_web_message_reconciliation_v1.md  11_detailed_design_plan_v1.md  12_code_generation_constraints_v1.md  13_detailed_design_v1.md  13_group_chat_api_doc_v1.md  14_complete_api_doc_v1.md  14_technical_spike_plan_v1.md  15_p0_auth_api_contract_v1.md  16_server_purchase_and_deployment_base_v1.md  17_object_storage_purchase_and_configuration_base_v1.md  18_object_storage_credential_min_permission_and_config_v1.md  19_public_ip_development_demo_access_decision_v1.md  20_codearts_formal_development_start_prompt_v1.md  21_backend_configuration_matrix_v1.md  21_codearts_prompt_review_workflow_v1.md  22_codearts_unattended_prompt_engineering_v1.md  25_server_deploy_and_obs_runbook_v1.md  26_remaining_function_completion_roadmap_v1.md  27_course_demo_and_delivery_checklist_v1.md  29_negative_user_behavior_test_matrix_v1.md  30_submission_detailed_design_v1.md  31_ai_post_moderation_design_v1.md  api_end_team.md  api_full_test_cases_20260611.md  backend_api_test_index_20260611.md  mobile_api_reference_20260527.md
docs/encoding_repair_backup_20260518_1036/: 03_current_plan.md.bak  20260518_backend_auth_register_test_record.md.bak  AGENTS.md.bak  latest.md.bak
docs/encoding_repair_backup_20260518_141039/: 03_current_plan.md  16_server_purchase_and_deployment_base_v1.md  latest.md
docs/encoding_repair_backup_20260518_170835/: 03_current_plan.md  latest.md
docs/handoff_before_object_storage_20260518_142109/: 03_current_plan.md  latest.md
docs/security_group_note_backup_20260518_141644/: 03_current_plan.md  20260518_server_base_environment_configuration_record.md  latest.md
docs/validation/: 20260517_backend_database_migration_test_record.md  20260517_backend_health_test_record.md  20260518_backend_auth_login_test_record.md  20260518_backend_auth_register_test_record.md  20260518_backend_campus_email_verification_check_test_record.md  20260518_backend_campus_email_verification_code_test_record.md  20260518_backend_configuration_properties_test_record.md  20260518_backend_database_migration_environment_validation_record.md  20260518_backend_jwt_probe_test_record.md  20260518_backend_rest_contract_test_record.md  20260518_deploy_compose_probe_record.md  20260518_desktop_api_client_test_record.md  20260518_desktop_qt6103_rerun_record.md  (+65 more)
handoff/: latest.md
latex_work/: CampusBuddy_Requirements_Analysis_Report_Coded.docx  README.md  body.tex  main.tex
prompts/: new_thread_prompt_template.md
scripts/: generate_requirement_report_docx.py  obs_min_connectivity_probe.ps1  obs_min_connectivity_probe_ecs.py  real_email_registration_smoke.ps1  server_api_full_smoke.ps1
(+166 files in other folders)
